# fusectl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SPRINT_1.md  SPRINT_2.md  SPRINT_3.md  SPRINT_4.md  SPRINT_5.md  install.sh  pyproject.toml  requirements.txt  run.sh  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  release.yml
assets/: logo_ascii.txt
docs/: devlog-rcm-injection.md
fusectl/: __main__.py
fusectl/core/: config.py  logger.py  version.py
fusectl/firmware/: manager.py
fusectl/rcm/: detector.py  injector.py  intermezzo.py
fusectl/sdcard/: detector.py  installer.py  preserve.py  updater.py
fusectl/ui/: app.py  widgets.py
fusectl/ui/screens/: confirm.py  file_picker.py  firmware.py  home.py  install.py  rcm.py  update.py
packaging/: fusectl-launcher  fusectl.desktop
packaging/appimage/: AppRun  build-appimage.sh  fusectl.appdata.xml
packaging/debian/: changelog  control  copyright  postinst  prerm  rules
packaging/flatpak/: com.github.fusectl.fusectl.yml
packaging/icons/: README
scripts/: build-packages.sh  diag_rcm.sh  hotplug_inject.py  install_udev.sh
tests/: conftest.py  test_config.py  test_firmware.py  test_installer.py  test_preserve.py  test_rcm.py  test_sd_detector.py  test_stress.py  test_tui_e2e.py  test_updater.py  test_version.py
udev/: 50-switch-rcm.rules
